<resources>
    <string name="app_name" translatable="false">DCodeReader</string>

    <!-- Menu String -->
    <string name="menu_new">New</string>
    <string name="menu_open">Open</string>
    <string name="menu_save">Save</string>
    <string name="menu_saveAs">Save as</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_details">Details</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_close">Close</string>

    <string name="menu_new_DCodeFile">DCode File</string>
    <string name="menu_new_DDBFile">DCode DataBase File</string>
    <string name="menu_new_TextFile">Text File</string>
</resources>
