<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_new"
        android:title="@string/menu_new" >
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/menu_new_DCodeFile"
                android:title="@string/menu_new_DCodeFile" />
            <item android:id="@+id/menu_new_DDBFile"
                android:title="@string/menu_new_DDBFile" />
            <item android:id="@+id/menu_new_TextFile"
                android:title="@string/menu_new_TextFile" />
        </menu>
    </item>
    <item android:id="@+id/menu_open"
        android:title="@string/menu_open" />
    <item android:id="@+id/menu_save"
        android:title="@string/menu_save" />
    <item android:id="@+id/menu_saveAs"
        android:title="@string/menu_saveAs" />
    <item android:id="@+id/menu_delete"
        android:title="@string/menu_delete" />
    <item android:id="@+id/menu_details"
        android:title="@string/menu_details" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />
    <item android:id="@+id/menu_close"
        android:title="@string/menu_close">
        <solid android:color="#00000000" />
    </item>
</menu>